Add stacktools: tools to check stack memory usage
On init, the stack is filled with canary values.
The functions in stacktools.h can be used by the user code at any time
to check if the canary values are still in place.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,8 @@ file(GLOB SOURCES
     "${CPM_MODULE_NAME}/src/*.c"
     )
 
+include_directories("${CPM_MODULE_NAME}")
+
 get_directory_property(DEFINITIONS COMPILE_DEFINITIONS)
 if ("CHIP_LPC11UXX" IN_LIST DEFINITIONS)
     message(STATUS "Got lpc11uxx: choosing USB startup code")
